<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="forename">Vorname</string>
    <string name="surname">Nachname</string>
    <string name="welcome_msg">Guten Tag! Geben Sie bitte Ihren Namen ein.</string>
    <string name="done">Weiter</string>
    <string name="welcome_msg_with_name">Guten Tag %1$s %2$s.</string>
    <string name="return_button">zurück</string>
    <string name="Telefonnummer">Telefonnummer</string>
    <string name="ZuKontaktenHin">Zu Kontakten hinzufügen</string>
    <string name="Anrufen">Anrufen</string>
    <string name="FragmentButton">Zu den Fragmenten</string>
    <string name="bla_bla_bla">Bla Bla bla...</string>
    <string name="add">Add</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zur_anrede">zur Anrede</string>
    <string name="herr">Hallo Herr %1$s %2$s.</string>
    <string name="frau">Hallo Frau %1$s %2$s.</string>
    <string name="textview">TextView</string>
    <string name="_2_box">2. Box</string>
    <string name="_1_box">1.Box</string>
    <string name="study_cursors">Study cursors</string>
    <string name="_3">3</string>
</resources>