<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_msg"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/system_accent1_400" />

        <EditText
            android:id="@+id/forenameEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autoText="true"
            android:ems="10"
            android:hint="@string/forename"
            android:inputType="text"
            android:visibility="visible" />

        <EditText
            android:id="@+id/surnameEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:autoText="true"
            android:ems="10"
            android:hint="@string/surname"
            android:inputType="text" />

        <Button
            android:id="@+id/button"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:onClick="welcomeUser"
            android:text="@string/done"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/Telefonnummer"
            android:inputType="phone" />

        <Button
            android:id="@+id/zuKontaktenHin"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:onClick="addToContacts"
            android:text="@string/ZuKontaktenHin" />

        <Button
            android:id="@+id/anrufen"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:onClick="callIntent"
            android:text="@string/Anrufen" />

        <Button
            android:id="@+id/switchToFragment"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:onClick="switchToFragments"
            android:text="@string/FragmentButton" />

        <Button
            android:id="@+id/buttonSwitchToPermission"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:onClick="switchToPermission"
            android:text="Zu Berechtigungen" />

        <Button
            android:id="@+id/zuWelcomeFragmentButton"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:onClick="switchToNavActivity"
            android:text="zu Welcome Frag" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>